# hikvision-cv-utils

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
examples/: CMakelists.txt  sample.cpp
include/hikvisionccd_cv_utils/CCD/: hikccd_videoplayer.hpp
include/hikvisionccd_cv_utils/hikvision/: yukihikccd.hpp
src/hikvisionccd_cv_utils/CCD/: hikccd_videoplayer.cpp
src/hikvisionccd_cv_utils/hikvision/: yukihikccd.cpp
